crates/ink/tests/ui/contract/fail/constructor/constructor-unsafe.stderr
error: ink! constructors must not be unsafe
  --> tests/ui/contract/fail/constructor/constructor-unsafe.rs:10:13
   |
10 |         pub unsafe fn constructor() -> Self {
   |             ^^^^^^
